--- a/backend/package.json
+++ b/backend/package.json
@@ -3,19 +3,20 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www.js",
+    "start": "node src/index.ts",
+    "dev": "nodemon src/index.ts",
     "watch-backend": "nodemon -L --ext js,prisma ./bin/www.js",
     "devstart": "nodemon --exec ts-node ./src/script.ts",
     "migrate-dev": "env-cmd -f ../.env.local npx prisma migrate dev",
     "migrate-deploy": "env-cmd -f ../.env.local npx prisma migrate deploy",
     "generate-schema": "env-cmd -f ../.env -- npx prisma generate",
     "generate-schema-prod": "npx prisma generate --binaryTargets debian-openssl-3.0"
-
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -24,8 +25,10 @@
     "env-cmd": "^10.1.0",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.0.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
