--- a/.env.local
+++ b/.env.local
@@ -7,5 +7,4 @@ DATABASE_URL=mysql://king:kingMaker123456789@localhost:3306/wvprg23-z1
 
 BACKEND_URL=http://localhost:8080
 VITE_BACKEND_URL=$BACKEND_URL
-JWT_ACCESS_SECRET=SECRET123
-JWT_REFRESH_SECRET=ANOTHER_SECRET123
+JWT_SECRET=secret
