--- a/backend/package.json
+++ b/backend/package.json
@@ -10,13 +10,11 @@
     "migrate-deploy": "env-cmd -f ../.env.local npx prisma migrate deploy",
     "generate-schema": "env-cmd -f ../.env -- npx prisma generate",
     "generate-schema-prod": "npx prisma generate --binaryTargets debian-openssl-3.0"
-
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
-    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -25,10 +23,10 @@
     "env-cmd": "^10.1.0",
     "express": "~4.16.1",
     "express-validator": "^7.0.1",
-    "jsonwebtoken": "^9.0.2",
     "mariadb": "^3.0.1",
     "morgan": "~1.9.1",
-    "uuid": "^9.0.1"
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
