--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "migrate-dev": "env-cmd -f ../.env.local npx prisma migrate dev",
     "migrate-deploy": "env-cmd -f ../.env.local npx prisma migrate deploy",
     "generate-schema": "env-cmd -f ../.env -- npx prisma generate",
-    "generate-schema-prod": "npx prisma generate --binaryTargets debian-openssl-3.0"
+    "generate-schema-prod": "npx prisma generate --binaryTargets debian-openssl-3.0",
+    "start:migrate:prod": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
