--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /usr/src/app
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
 # where available (npm@5+)
 COPY package*.json ./
+COPY prisma ./prisma
 
 RUN npm install
 # If you are building your code for production
@@ -19,4 +20,4 @@ COPY . .
 RUN npx prisma generate 
 
 EXPOSE 8080
-CMD ["sh", "-c", "npx prisma migrate deploy && npm start"]
+CMD [ "npm", "start", "start:migrate:prod" ]
